kubernetes - Copy/inventory-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: inventory-db
  template:
    metadata:
      labels:
        app: inventory-db
    spec:
      containers:
        - name: inventory-db
          image: postgres:latest
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 200m
              memory: 500Mi
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: inventory-db-data
      volumes:
        - name: inventory-db-data
          persistentVolumeClaim:
            claimName: inventory-db-data
