kubernetes - Copy/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    app: api-gateway
