kubernetes - Copy/order-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Kompose\kompose.exe --file .\docker-compose.yml convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: order-db
  name: order-db
spec:
  ports:
    - name: "5434"
      port: 5434
      targetPort: 5432
  selector:
    io.kompose.service: order-db
status:
  loadBalancer: {}
